# panacea

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/simple/: main.rs
panacea/: Cargo.toml
panacea-proc-macros/: Cargo.toml
panacea-proc-macros/src/: lib.rs
panacea-types/: Cargo.toml
panacea-types/src/: event.rs  handler.rs  lib.rs  state.rs  worker.rs
panacea/examples/simple-outbox/: main.rs
panacea/examples/worker/: main.rs
panacea/src/: lib.rs
panacea/src/outbox/: mod.rs
panacea/src/worker/: mod.rs
src/: lib.rs
src/event/: mod.rs
src/outbox/: mod.rs
