[package]
name = "panacea-proc-macros"
version = "0.1.0"
description = "Event streaming and processing framework, based around transactional outbox pattern. Ideal for building eventually consistent distributed event-driven systems."
authors = ["Rinat Shaykhutdinov <mail@rinatshay.com>"]
license = "MIT"
edition = "2021"

categories = ["web-programming"]

[lib]
proc-macro = true

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
async-std = { version = "1.12.0", optional = true }
async-trait = "0.1.61"
chrono = "0.4.23"
ctrlc = { version = "3.2.4", optional = true }
panacea-types = { path = "../panacea-types" }
proc-macro2 = "1.0.51"
quote = "1.0.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", default-features = false, optional = true }
state = "0.5.3"
syn = { version = "1.0.107", features = ["parsing"] }
thiserror = "1.0.38"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
ctrlc = "3.2.4"

[features]
default = []
mysql = ["panacea-types/mysql", "sqlx/mysql"]
postgres = ["panacea-types/postgres", "sqlx/postgres"]
sqlite = ["panacea-types/sqlite", "sqlx/sqlite"]
sqlx = ["sqlx/chrono", "sqlx/macros"]
sqlx-runtime-async-std-native-tls = ["sqlx", "sqlx/runtime-async-std-native-tls", "panacea-types/sqlx-runtime-async-std-native-tls"]
sqlx-runtime-async-std-rustls = ["sqlx", "sqlx/runtime-async-std-rustls", "panacea-types/sqlx-runtime-async-std-rustls"]
sqlx-runtime-tokio-native-tls = ["sqlx", "sqlx/runtime-tokio-native-tls", "panacea-types/sqlx-runtime-tokio-native-tls"]
sqlx-runtime-tokio-rustls = ["sqlx", "sqlx/runtime-tokio-rustls", "panacea-types/sqlx-runtime-tokio-rustls"]

[package.metadata.docs.rs]
features = ["postgres", "sqlx-runtime-async-std-native-tls"]
